packages/jsii/test/negatives/neg.internal-underscore-interface.2.ts
export interface IMyInterface {
  _propertyWithUnderscoreButNoInternal: string;
}
